# simplified-ai-parser

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py  test.md
app/: main.py
app/api/: parse_route.py
app/core/: config.py
app/models/: response.py
app/service/: document_parser.py  docx_parser.py  markdown_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
app/utils/: __init__.py  image_extractor.py
